--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -7,6 +7,9 @@ schemas = ["public", "graphql_public"]
 extra_search_path = ["public", "extensions"]
 max_rows = 1000
 
+[functions.env]
+  VITE_WEBHOOK_URL = "https://hook.eu2.make.com/replace-with-your-webhook"
+
 [functions.ai-source-generator]
 verify_jwt = false
 
